# EITELConnector

./: .env.production.example  .gitignore  CHANGELOG.md  CITATION.cff  POLITICAS_CONTRATOS_ODRL_DCAT.md  README.md  dataspaceconnector-configuration.properties  docker-compose.fuenlabrada.production.yaml  docker-compose.production.yaml  docker-compose.uc3m.yaml  docker-compose.yaml
.github/workflows/: ci.yml
caas/: README.md  docker-compose.caas.yaml
caas/control-plane/: .env.example  Dockerfile  requirements.txt
caas/data/: caas.db
deploy/: Dockerfile
desktop/eitel-tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop/eitel-tauri/src-tauri/capabilities/: default.json
desktop/eitel-tauri/src-tauri/src/: lib.rs  main.rs
docs/: DEPLOYMENTS.md  MEMORIA_AVANCE_CONECTORES.docx  MEMORIA_AVANCE_CONECTORES.tex  MEMORIA_AVANCE_CONECTORES_actualizada.docx  PUBLIC_CATALOG.md  RELEASE_NOTES_v1.0.10.md  RELEASE_NOTES_v1.0.11.md  RELEASE_NOTES_v1.0.4.md  RELEASE_NOTES_v1.0.6.md  RELEASE_NOTES_v1.0.7.md  RELEASE_NOTES_v1.0.8.md  REPRODUCIBILITY.md  connector_sequence_diagrams.drawio  ~$MORIA_AVANCE_CONECTORES_actualizada.docx
gaia-x/: did.json  lrn.json  participant.json  tsandcs.json  vp-UC3M.json  vp-UC3Mcompliance.json
gateway/: nginx-fuenlabrada.conf  nginx-local.conf  nginx.conf
legacy/: docker-compose-backup.yaml  init.sql
paper/: connector_methodology.tex  highlights.txt
scripts/: validate_download_capture.sh  validate_local_asset_upload.sh  validate_stack.sh
traefik/: nginx-fuenalabrada.conf  nginx-fuenlabrada.conf  nginx-uc3m.conf  nginx.conf
(+101 files in other folders)
