[package]
name = "eitel_connector_desktop"
version = "0.1.0"
description = "EITEL Connector Desktop shell"
authors = ["EITEL"]
edition = "2021"

[lib]
name = "eitel_connector_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
